# smart-beauty-resize-preprocessor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  smart-beauty-resize-phase1-fixed.patch  smart-beauty-resize-phase2-profile-cli.patch  smart-beauty-resize-phase3a-decoder-audit.patch  smart-beauty-resize-phase3b-manifest-decode-metadata.patch  smart-beauty-resize-phase3c1-input-policy.patch  smart-beauty-resize-phase3c2-profile-policy.patch  smart-beauty-resize-phase4a-dataset-audit.patch  smart-beauty-resize-phase4b-source-limits.patch  smart-beauty-resize-phase4c-output-collision-preflight.patch  smart-beauty-resize-phase5a-performance-measurement.patch  smart-beauty-resize-phase6-release-handoff-fixed.patch  smart-beauty-resize-phase6-release-handoff.patch
.github/workflows/: ci.yml  performance.yml  reproducibility.yml
benchmarks/: benchmark_batch.py  benchmark_pipeline_stages.py  benchmark_resize.py
configs/: default.yaml
docs/: integration-guide.md  performance-measurement.md  phase-3-validation-report.md  release-checklist.md
src/smart_beauty_resize/: __init__.py  __main__.py  api.py  cli.py  config.py  contracts.py  geometry.py
src/smart_beauty_resize/audit/: __init__.py  report.py
src/smart_beauty_resize/backends/: opencv_backend.py
src/smart_beauty_resize/batch/: __init__.py  contracts.py  discovery.py  processor.py
tests/golden/: generate_golden_fixtures.py  metadata.json
tests/performance/: conftest.py  test_batch_benchmark_harness.py  test_benchmark_harness.py  test_pipeline_stage_benchmark.py
tests/regression/: test_golden_resize.py
tests/reproducibility/: test_cross_environment_reproducibility.py
tests/robustness/: test_failure_injection.py  test_large_batch_stress.py
tests/unit/: test_config.py  test_geometry.py  test_import.py  test_opencv_backend.py  test_release_metadata.py
(+23 files in other folders)
